PLANET-7267 Make sure editor links are styled with the new identity (#2117)
Before this change they were not visible

--- a/assets/src/scss/new-identity/style.scss
+++ b/assets/src/scss/new-identity/style.scss
@@ -351,6 +351,11 @@ table.spreadsheet-table.is-color-gp-green {
   @include shared-link-styles;
 }
 
+// Editor links
+.editor-styles-wrapper p > a {
+  @include shared-link-styles;
+}
+
 .cookies-settings-header h4 {
   font-family: var(--font-family-paragraph-secondary);
 }
